--- a/WebApplication - Mission Assignment #6/WebApplication - Mission Assignment #6.csproj
+++ b/WebApplication - Mission Assignment #6/WebApplication - Mission Assignment #6.csproj
@@ -7,4 +7,12 @@
     <RootNamespace>WebApplication___Mission_Assignment__6</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
